package cpp.cs5800.adv_swe.assignment1.composition;

public class File {

    private String name;

    public File(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public void print(){
        System.out.println("Filename: " + this.name);
    }
}